# whisk

./: .bumpversion.cfg  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  LICENSE  PAPRIKA_DELETE_RESEARCH.md  PROJECT.md  README.md  SYNC_ARCHITECTURE_ANALYSIS.md  VERSION_MANAGEMENT.md  config.yaml  install.bat  install.sh  pyproject.toml
.claude/: settings.json
.claude/skills/: release.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
examples/: paprika_recipes_usage.py  skylight_usage.py  state_management_demo.py  sync_engine_demo.py
scripts/: bump_version.sh  extract_changelog.sh  find_skylight_frame.py  restore_paprika_backup.py  ultra_safe_paprika_test.py  update_changelog.sh  verify_setup.py
src/: __init__.py  conflict_resolver.py  item_linker.py  main.py  paprika_client.py  skylight_client.py  state_manager.py  state_manager_v2.py  sync_engine.py  sync_engine_v2.py
tests/: __init__.py  test_final_crud.py  test_paprika.py  test_phase5.py  test_phase6_complete.py  test_skylight_full.py  test_state_management.py  test_sync_engine.py
whisk/: __init__.py  __main__.py  _version.py  cli.py  config.py  conflict_resolver.py  daemon.py  item_linker.py  meal_sync_engine.py  models.py  multi_sync_engine.py  paprika_client.py  setup_wizard.py  skylight_client.py  state_manager.py  sync_engine.py
