[project]
name = "paprika-skylight-sync"
version = "0.1.0"
description = "Bidirectional sync between Paprika and Skylight grocery lists"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
